<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background_vintage"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:padding="16dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/ticket_details_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_summary_title"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/tv_cinema"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cinema"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tv_screening"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/screening"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tv_adult_tickets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adult_tickets"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tv_child_tickets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/child_tickets"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_back_to_home"
                style="@style/CustomButtonStyle"
                app:icon="@drawable/baseline_arrow_back_24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back_to_home_page"
                android:layout_marginTop="16dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
