<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@drawable/background_vintage">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interesting_facts"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            app:cardBackgroundColor="@color/gray_white">

            <TextView
                android:id="@+id/factTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:padding="16dp"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_many_facts_did_you_know"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp" />

        <SeekBar
            android:id="@+id/knownFactsSeekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:max="20"
            android:progress="0"
            android:thumbTint="@color/black"
            android:progressTint="@color/gray_white"
            android:minHeight="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp" />

        <TextView
            android:id="@+id/feedbackTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/you_re_just_starting_out"
            android:textSize="16sp"
            android:textStyle="italic"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/knownFactsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/facts_i_knew_0_10"
            android:textAlignment="center"
            android:textColor="@color/black"/>
    </LinearLayout>
</ScrollView>
