<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.8"
        android:scaleType="fitXY"
        android:src="@drawable/background_image_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/musicControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/musicIcon"
            android:layout_gravity="top|start"
            android:layout_marginStart="0dp"
            android:layout_marginTop="30dp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_music_note"
            tools:ignore="ContentDescription" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/musicSwitch"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="top|start"
            android:layout_marginStart="0dp"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="50dp"
            app:thumbTint="@color/black"
            app:trackTint="@color/black" />


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/infoButton"
        style="@style/CustomButtonStyle"
        android:layout_marginBottom="5dp"
        android:text="@string/infoButton"
        app:icon="@drawable/baseline_stories"
        app:layout_constraintBottom_toTopOf="@+id/galleryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/galleryButton"
        style="@style/CustomButtonStyle"
        android:text="@string/galleryButton"
        app:icon="@drawable/baseline_filter_24"
        app:layout_constraintBottom_toTopOf="@+id/ticketsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/infoButton"
        android:layout_marginBottom="5dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ticketsButton"
        style="@style/CustomButtonStyle"
        android:text="@string/ticketsButton"
        app:icon="@drawable/baseline_add_shopping_cart_24"
        app:layout_constraintBottom_toTopOf="@+id/MyticketsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/galleryButton"
        android:layout_marginBottom="5dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/MyticketsButton"
        style="@style/CustomButtonStyle"
        android:text="@string/MyticketsButton"
        app:icon="@drawable/baseline_file_copy_24"
        app:layout_constraintBottom_toTopOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ticketsButton"
        android:layout_marginBottom="16dp" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="363dp"
        android:layout_height="85dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="4dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/factsIB"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@android:color/transparent"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/facts"
        app:layout_constraintTop_toBottomOf="@id/musicControl"
        tools:ignore="ContentDescription,MissingConstraints,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>